[tool.poetry]
name = "railway-build-test"
version = "0.1.0"
description = ""
authors = ["Lara <lsalsham@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
zoho-clients = {version = "^1.4.0", source = "nucleus"}


[[tool.poetry.source]]
name = "nucleus"
url = "https://ion8-nucleus.up.railway.app/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
